Added Home Page
Added a jQuery page for the home page. It contains some welcome text and information and will become the page that the user accesses when first visiting the website.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<!--- Application and web page title --->
-		<title>Skateboard Builder</title>
+		<title>Skateboard Builder Concept</title>
 		
 		<!--- jQuery CDN Hosted Files --->
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
@@ -9,6 +10,23 @@
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	</head>
 	<body>
-		<h1>Sample Text</h1>
+		<!--- Home Page --->
+		<div data-role="home">
+			<!--- Header --->
+			<div data-role="header">
+				<h1>Home</h1>
+			</div>
+			
+			<!--- Main/Body --->
+			<div data-role="main" class="ui-container">
+				<h1>Welcome</h1>
+				<p>This website explains my concept for a Skateboard builder mobile application. Please use the navigation bar to access the different sections</p>
+			</div>
+			
+			<!--- Footer -->
+			<div data-role="footer">
+				<h2>&copy; Christian Benner 2019</h2>
+			</div>
+		</div>
 	</body>
 </html>
