Added a Goals Page
A page for the project goals has been added. A link has been provided so that you can transition to and from each page. There is no content in the page yet - it is simply a placeholder.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<!--- Home Page --->
-		<div data-role="home">
+		<div data-role="page" id="home-page">
 			<!--- Header --->
 			<div data-role="header">
 				<h1>Home</h1>
@@ -21,6 +21,29 @@
 			<div data-role="main" class="ui-container">
 				<h1>Welcome</h1>
 				<p>This website explains my concept for a Skateboard builder mobile application. Please use the navigation bar to access the different sections</p>
+				<a href="#goals-page">Goals Page</a>
+			</div>
+			
+			<!--- Footer -->
+			<div data-role="footer">
+				<h2>&copy; Christian Benner 2019</h2>
+			</div>
+		</div>
+		
+		
+		
+		<!--- Goals Page --->
+		<div data-role="page" id="goals-page">
+			<!--- Header --->
+			<div data-role="header">
+				<h1>Goals</h1>
+			</div>
+			
+			<!--- Main/Body --->
+			<div data-role="main" class="ui-container">
+				<h1>Goals</h1>
+				<p>Goals text</p>
+				<a href="#home-page">Home Page</a>
 			</div>
 			
 			<!--- Footer -->
