--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div data-role="main" class="ui-container">
 				<h1>Welcome</h1>
 				<p>This website explains my concept for a Skateboard builder mobile application. Please use the navigation bar to access the different sections</p>
-				<a href="#goals-page">Goals Page</a>
+				<a href="#goals-page" data-transition="slide">Goals Page</a>
 			</div>
 			
 			<!--- Footer -->
@@ -43,7 +43,7 @@
 			<div data-role="main" class="ui-container">
 				<h1>Goals</h1>
 				<p>Goals text</p>
-				<a href="#home-page">Home Page</a>
+				<a href="#home-page" data-transition="slide">Home Page</a>
 			</div>
 			
 			<!--- Footer -->
