Updated Navigation Bar Icons
Changed the data icons for each page in the navigation bar to be more suitable.

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="grid" data-transition="slide">Home</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
 						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="grid" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="grid" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="grid" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="grid" data-transition="slide">Technologies</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -56,12 +56,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="grid" data-transition="slide">Home</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
 						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="grid" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="grid" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="grid" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="grid" data-transition="slide">Technologies</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -88,12 +88,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="grid" data-transition="slide">Home</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
 						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="grid" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="grid" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="grid" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="grid" data-transition="slide">Technologies</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -120,12 +120,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="grid" data-transition="slide">Home</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
 						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="grid" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="grid" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="grid" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="grid" data-transition="slide">Technologies</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -152,12 +152,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="grid" data-transition="slide">Home</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
 						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="grid" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="grid" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="grid" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="grid" data-transition="slide">Technologies</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -183,12 +183,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="grid" data-transition="slide">Home</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
 						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="grid" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="grid" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="grid" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="grid" data-transition="slide">Technologies</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
