--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 		  
-
+		<style>
+			[data-role = footer] { position:absolute !important; bottom:0; top:auto !important; width:100%; }
+			[data-role = page] { position:relative !important; height:100% !important; }
+		</style>
 	</head>
 	<body>
 		<!--- Home Page --->
@@ -25,12 +28,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
-						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="fade">Home</a></li>
+						<li><a href="#goals-page" data-icon="grid" data-transition="fade">Goals</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="fade">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="fade">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="fade">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="fade">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -56,12 +59,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
-						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="fade">Home</a></li>
+						<li><a href="#goals-page" data-icon="grid" data-transition="fade">Goals</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="fade">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="fade">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="fade">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="fade">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -88,12 +91,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
-						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="fade">Home</a></li>
+						<li><a href="#goals-page" data-icon="grid" data-transition="fade">Goals</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="fade">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="fade">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="fade">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="fade">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -120,12 +123,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
-						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="fade">Home</a></li>
+						<li><a href="#goals-page" data-icon="grid" data-transition="fade">Goals</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="fade">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="fade">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="fade">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="fade">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -152,12 +155,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
-						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="fade">Home</a></li>
+						<li><a href="#goals-page" data-icon="grid" data-transition="fade">Goals</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="fade">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="fade">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="fade">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="fade">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -173,7 +176,8 @@
 			<div data-role="footer">
 				<h2>&copy; Christian Benner 2019</h2>
 			</div>
-			
+		</div>
+		
 		<!--- Technologies Page --->
 		<div data-role="page" id="technologies-page" data-theme="d">
 			<!--- Header --->
@@ -183,12 +187,12 @@
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home-page" data-icon="home" data-transition="slide">Home</a></li>
-						<li><a href="#goals-page" data-icon="grid" data-transition="slide">Goals</a></li>
-						<li><a href="#personas-page" data-icon="user" data-transition="slide">Personas</a></li>
-						<li><a href="#sketches-page" data-icon="edit" data-transition="slide">Sketches</a></li>
-						<li><a href="#critique-page" data-icon="eye" data-transition="slide">Critique</a></li>
-						<li><a href="#technologies-page" data-icon="gear" data-transition="slide">Technologies</a></li>
+						<li><a href="#home-page" data-icon="home" data-transition="fade">Home</a></li>
+						<li><a href="#goals-page" data-icon="grid" data-transition="fade">Goals</a></li>
+						<li><a href="#personas-page" data-icon="user" data-transition="fade">Personas</a></li>
+						<li><a href="#sketches-page" data-icon="edit" data-transition="fade">Sketches</a></li>
+						<li><a href="#critique-page" data-icon="eye" data-transition="fade">Critique</a></li>
+						<li><a href="#technologies-page" data-icon="gear" data-transition="fade">Technologies</a></li>
 					</ul>
 				</div>
 			</div>
@@ -204,7 +208,6 @@
 			<div data-role="footer">
 				<h2>&copy; Christian Benner 2019</h2>
 			</div>
-		</div>
 		</div>
 	</body>
 </html>
