Added Home Page Sketch
Added a home page sketch. Changes the board customisation page design

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 				<p>These are the different sketches and designs for the application. You can select an individual sketch to enlarge it and view more information on it.</p>
 				
 				<div class="design-row">
+					<img class="design-image" src="images/home_page.png">
 					<img class="design-image" src="images/board_customisation_page.png">
 				</div>
 			</div>
