Implemented Designs on Page
Added the design images to the sketches page

--- a/index.html
+++ b/index.html
@@ -168,8 +168,15 @@
 				<p>These are the different sketches and designs for the application. You can select an individual sketch to enlarge it and view more information on it.</p>
 				
 				<div class="design-row">
-					<img class="design-image" src="images/home_page_redo.png">
-					<img class="design-image" src="images/board_customisation_page.png">
+					<img class="design-image" src="images/home_page_final.png">
+					<img class="design-image" src="images/deck_width_select.png">
+					<img class="design-image" src="images/deck_design_select.png">
+					<img class="design-image" src="images/truck_select.png">
+					<img class="design-image" src="images/wheel_select.png">
+					<img class="design-image" src="images/griptape_select.png">
+					<img class="design-image" src="images/bearing_select.png">
+					<img class="design-image" src="images/confirm_selection.png">
+					<img class="design-image" src="images/component_overview.png">
 				</div>
 			</div>
 			
