Added save selection design
Save selection design image has been added to the scetches page

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 					<img class="design-image" src="images/bearing_select.png">
 					<img class="design-image" src="images/confirm_selection.png">
 					<img class="design-image" src="images/component_overview.png">
+					<img class="design-image" src="images/save_select.png">
 				</div>
 			</div>
 			
