--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			<!--- Main/Body --->
 			<div data-role="main" class="ui-container">
 				<h1>Sketches</h1>
-				<p>These are the different sketches and designs for the application. You can select an individual sketch to enlarge it and view more information on it.</p>
+				<p>On this page you can find multiple mock-ups and designs that I created. The designs use colours, logos and images that will likely be different in the final application, however they give a general idea on how the application will look and feel. Also note that the products on most pages represent a 3D model on a 3D view (they are not going to be static 2D images in the application).</p>
 				
 				<div class="image-container">
 					<!---<a href="#technologies-page"><img class="design-image" src="images/home_page_final.png"></a>--->
@@ -259,7 +259,13 @@
 			<div data-role="main" class="ui-container">
 				<h1>Technologies</h1>
 				<p>To produce my application I am going to use multiple different technologies. The list of technologies is:</p>
-				
+				<ul>
+					<li><b>Android Studio:</b> This is an IDE developed by Android developers themselves. It is one of the best for Android development because it has multiple useful built in features such as debugging on a real smartphone by connecting it to the computer using the ADB (android debug bridge). The software is built on an IntelliJ which is an existing and popular IDE. It is one of my personal favourites and I feel confident in using it for the development of this project.</li>
+					<li><b>CrispinEngine:</b> This is a 2D and 3D graphics engine that I created in my personal time. It is built using OpenGL ES (open graphics library) and designed specifically for Android devices. The engine can import OBJ models and adding textures. It is very simple to use, and I am very familiar with how to use it (as I made it) so it is my number one choice over other engines out there. The engine is also fully documented so I can look at the code to understand how it works if necessary.  The GitHub URL for that is <a href="https://github.com/ChristianBenner/HordeSurvival/tree/master/crispinmobile">https://github.com/ChristianBenner/HordeSurvival/tree/master/crispinmobile</a>.</li>
+					<li><b>Java:</b> I will write the application in Java because it is one of two programming languages that I am confident in. I am familiar with the object-oriented paradigm and believe that it is very suitable for my application. Java is also the primary Android programming language and Android Studio is very oriented around the use of it for development.</li>
+					<li><b>Wavefront:</b> Wavefront is the format of OBJ file types. It is a simple and easy to use model file type that can store vertex, texture and lighting data. This is suitable for my application as the engine I am using to display 3D graphics can load this file type.</li>
+					<li><b>Android SDK:</b> I will also use the built in Android SDK (software development kit) built into Android Studio. It is probable I will use the user interface libraries to select different components on the 3D view (I may use CrispinEngine user interface library instead however).</li>
+				</ul>
 			</div>
 			
 			<!--- Footer -->
