Updated Goals Page Header
The goals page header was incorrect. It states 'goal' not 'goals'

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div data-role="page" id="goals-page" data-theme="d">
 			<!--- Header --->
 			<div data-role="header">
-				<h1>Goal</h1>
+				<h1>Goals</h1>
 				
 				<!--- Navigation Bar --->
 				<div data-role="navbar">
